portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.8-11.build.log
15:15:32 **** Build of configuration Debug for project ex.8-11 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.8-11.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.8-11.d" -MT"ex.8-11.o" -o "ex.8-11.o" "../ex.8-11.cpp"
../ex.8-11.cpp:19:2: error: missing return type for function 'carray'; did you mean the constructor name 'carry'?
        carray(int co) {count = co; pary = new int[count]; };
        ^~~~~~
        carry
../ex.8-11.cpp:20:3: error: expected the class name after '~' to name a destructor
        ~carray() {delete [] pary;}
         ^~~~~~
         carry
../ex.8-11.cpp:33:2: error: unknown type name 'carray'; did you mean 'carry'?
        carray ary(5);
        ^~~~~~
        carry
../ex.8-11.cpp:12:7: note: 'carry' declared here
class carry
      ^
../ex.8-11.cpp:35:22: error: no member named 'GetCount' in 'carry'
        for(int i=0; i< ary.GetCount(); i++)
                        ~~~ ^
../ex.8-11.cpp:36:7: error: no member named 'SetValue' in 'carry'
                ary.SetValue(i,i+1);
                ~~~ ^
../ex.8-11.cpp:38:6: error: no member named 'print' in 'carry'
        ary.print();
        ~~~ ^
6 errors generated.
make: *** [ex.8-11.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:15:33 Build Failed. 7 errors, 0 warnings. (took 800ms)

